# cursor-streamlit-mcp

./: .env.example  .gitignore  CHANGES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  SLASH_COMMANDS.md  TYPE_CHECKING_NOTES.md  pyproject.toml  run_backend.sh  run_frontend.sh
backend/: __init__.py  main.py
backend/agent/: __init__.py  graph.py  state.py  tools.py
backend/api/: routes.py
backend/mcp/: config.py  server_manager.py
backend/rag/: __init__.py  document_processor.py  vectorstore.py
config/: mcp_servers.json
docs/: MCP_INTEGRATION_NOTES.md  QUICKSTART.md  RAG_DOCUMENT_MANAGEMENT.md  TESTING.md
frontend/: app.py
